log

Thu 17 Aug 2023 07:56:43 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘)’ token
   36 |   for (int i)
      |             ^
exercises.c:38:1: error: expected expression before ‘}’ token
   38 | }
      | ^
exercises.c:34:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   34 |   int aux;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
bf84b98
Thu 17 Aug 2023 08:51:03 PM UTC: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
31cf0ef
Thu 17 Aug 2023 09:40:40 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:67:18: error: expected expression before ‘]’ token
   67 |   return arrEven[];
      |                  ^
exercises.c:54:7: error: variable ‘arrEven’ set but not used [-Werror=unused-but-set-variable]
   54 |   int arrEven[size/2];
      |       ^~~~~~~
exercises.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7a50917
Fri 18 Aug 2023 12:21:24 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:67:19: error: expected expression before ‘]’ token
   67 |   return *arrEven[];
      |                   ^
exercises.c:54:7: error: variable ‘arrEven’ set but not used [-Werror=unused-but-set-variable]
   54 |   int arrEven[size/2];
      |       ^~~~~~~
exercises.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f2e7f29
Fri 18 Aug 2023 12:21:44 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:67:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   67 |   return *arrEven;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ea9cfee
